--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 @font-face {
     font-family: 'space';
     src: url(space.ttf), format(truetype);
+    font-display: swap;
 }
 
 body {
     text-align: center;
     display: block;
+}
 
-    .header {
-        font-family: 'space', sans-serif;
-        font-size: 2.5rem;
-        margin-bottom: 2rem;
-        color: rgb(158, 91, 91);
-    }
+.header {
+    font-family: 'space', sans-serif;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    color: rgb(158, 91, 91);
 }
