--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
     font-size: 3.5rem;
     margin-bottom: 2rem;
     color: #770000;
+    text-shadow: -3px 3px 0px yellow;
 }
 
 /* Base styling for mobile control buttons */
