--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,20 @@
     font-display: swap;
 }
 
+#fullscreen {
+    border-radius: 0.2rem;
+    background-color: #770000;
+    color: yellow;
+    display: inline-block;
+    margin: 4px 2px; 
+    cursor: pointer; 
+}
+
+#fullscreen:fullscreen {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     text-align: center;
     display: block;
@@ -13,7 +27,7 @@ body {
 .header {
     font-family: 'space', sans-serif;
     font-size: 3.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.8rem;
     color: #770000;
     text-shadow: -3px 3px 0px yellow;
 }
