--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     padding: 15px 32px; 
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     margin: 4px 2px; 
     cursor: pointer; 
     border-radius: 4px; 
@@ -38,6 +38,10 @@ body {
 
 #canvas1 {
     border: 2px solid yellow;
+    display: block;
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -62,6 +66,7 @@ body {
     bottom: 10px; 
     transform: translateX(-50%); 
     display: none;
+    cursor: pointer;
 }
 
 /* Show the controls on mobile devices */
