--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@
     text-align: center;
     text-decoration: none;
     display: block;
-    margin: 4px 2px; 
+    margin: auto;
+    margin-top: 1rem; 
     cursor: pointer; 
     border-radius: 4px; 
 }
